--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle:
+title: No Jekyll
+subtitle: 吾生也有涯，而知也无涯。以有涯随无涯，殆已！已而为知者，殆而已矣
 description:
 keywords:
-author: John Doe
+author: 1F926
 language:
 timezone:
 
@@ -74,6 +74,7 @@ pagination_dir: page
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 #theme: landscape
+#landscape is a default theme
 theme: next
 
 # Deployment
