--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: No Jekyll
+title: biubiubiu~
 subtitle: 吾生也有涯，而知也无涯。以有涯随无涯，殆已！已而为知者，殆而已矣
 description:
 keywords:
 author: 1F926
-language:
+language: zh-Hans
 timezone:
 
 # URL
