--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -151,6 +151,7 @@ links_layout: block
 #links_layout: inline
 links:
   还木有: https://hzj991.github.io/
+  郭德旭: https://blog.csdn.net/qq_15539917
 
 # Sidebar Avatar
 # in theme directory(source/images): /images/avatar.gif
