--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ pagination_dir: page
 ## Themes: https://hexo.io/themes/
 #theme: landscape
 #landscape is a default theme
-theme: next
+theme: next6.0
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
