--- a/_config.yml
+++ b/_config.yml
@@ -76,6 +76,7 @@ pagination_dir: page
 #theme: landscape
 #landscape is a default theme
 theme: next6.0
+# theme: replica
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
