--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "version": "3.8.0"
   },
   "dependencies": {
+    "braces": ">=2.3.1",
+    "eslint": "^5.16.0",
     "hexo": "^3.7.0",
     "hexo-deployer-git": "^1.0.0",
     "hexo-generator-archive": "^0.1.5",
