--- a/_config.yml
+++ b/_config.yml
@@ -84,3 +84,20 @@ deploy:
   type: git
   repo: git@github.com:hzj991/hzj991.github.io.git
   branch: master
+
+live2d:
+  enable: true
+  scriptFrom: local
+  pluginRootPath: live2dw/
+  pluginJsPath: lib/
+  pluginModelPath: assets/
+  tagMode: false
+  debug: false
+  model:
+    use: live2d-widget-model-wanko
+  display:
+    position: left
+    width: 225
+    height: 450
+  mobile:
+    show: true
