--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: biubiubiu~
 subtitle: 吾生也有涯，而知也无涯。以有涯随无涯，殆已！已而为知者，殆而已矣
 description:
 keywords:
-author: 1F926
+author: hzjoyous
 language: zh-Hans
 timezone:
 
