--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ pagination_dir: page
 #theme: landscape
 #landscape is a default theme
 # theme: hexo-theme-sagiri
-theme: next6.0
+theme: myNext
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
