--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ pagination_dir: page
 #theme: landscape
 #landscape is a default theme
 # theme: hexo-theme-sagiri
-theme: myNext
+theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
@@ -84,20 +84,3 @@ deploy:
   type: git
   repo: git@github.com:hzjoyous/hzjoyous.github.io.git
   branch: master
-
-live2d:
-  enable: true
-  scriptFrom: local
-  pluginRootPath: live2dw/
-  pluginJsPath: lib/
-  pluginModelPath: assets/
-  tagMode: false
-  debug: false
-  model:
-    use: live2d-widget-model-wanko
-  display:
-    position: left
-    width: 100
-    height: 200
-  mobile:
-    show: true
