--- a/package.json
+++ b/package.json
@@ -3,23 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "4.1.1"
+    "version": "4.2.0"
   },
   "dependencies": {
     "braces": ">=2.3.1",
     "eslint": "^5.16.0",
-    "hexo": "^4.1.1",
+    "hexo": "^4.2.0",
     "hexo-deployer-git": "^1.0.0",
     "hexo-fs": "^1.0.2",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.1",
     "hexo-generator-tag": "^0.2.0",
-    "hexo-helper-live2d": "^3.1.1",
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-marked": "^2.0.0",
     "hexo-renderer-stylus": "^0.3.3",
-    "hexo-server": "^0.3.1",
-    "live2d-widget-model-wanko": "^1.0.5"
+    "hexo-server": "^0.3.1"
   }
 }
