--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: biubiubiu~
-subtitle: 快乐~
+title: 黍离
+subtitle: 知我者，谓我心忧，不知我者，谓我何求~
 description: 
 keywords:
 author: hzjoyous
 language: zh-Hans
-timezone:
+timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
