--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "braces": ">=2.3.1",
+    "chalk": "^3.0.0",
+    "commander": "^4.1.0",
     "eslint": "^5.16.0",
     "hexo": "^4.2.0",
     "hexo-deployer-git": "^1.0.0",
@@ -18,6 +20,10 @@
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-marked": "^2.0.0",
     "hexo-renderer-stylus": "^0.3.3",
-    "hexo-server": "^0.3.1"
+    "hexo-server": "^0.3.1",
+    "inquirer": "^7.0.3"
+  },
+  "scripts": {
+    "new": "node tool/newblog.js"
   }
 }
