--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 黍离
-subtitle: 知我者，谓我心忧，不知我者，谓我何求~
+title: 吱
+subtitle: 吱吱吱，吱吱，吱吱吱吱吱，吱吱~
 description: 
 keywords:
 author: hzjoyous
@@ -76,7 +76,8 @@ pagination_dir: page
 #theme: landscape
 #landscape is a default theme
 # theme: hexo-theme-sagiri
-theme: next6
+# theme: next6
+theme: icarus
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
