--- a/package.json
+++ b/package.json
@@ -6,21 +6,28 @@
     "version": "4.2.0"
   },
   "dependencies": {
+    "babel-plugin-inferno": "^6.1.0",
     "braces": ">=2.3.1",
+    "bulma-stylus": "0.8.0",
     "chalk": "^3.0.0",
     "commander": "^4.1.0",
     "eslint": "^5.16.0",
     "hexo": "^4.2.0",
+    "hexo-component-inferno": "0.2.4",
     "hexo-deployer-git": "^1.0.0",
     "hexo-fs": "^1.0.2",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.1",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-pagination": "1.0.0",
     "hexo-renderer-ejs": "^0.3.1",
+    "hexo-renderer-inferno": "0.1.3",
     "hexo-renderer-marked": "^2.0.0",
-    "hexo-renderer-stylus": "^0.3.3",
+    "hexo-renderer-stylus": "1.1.0",
     "hexo-server": "^0.3.1",
+    "inferno": "7.3.3",
+    "inferno-create-element": "7.3.3",
     "inquirer": "^7.0.3",
     "moment": "^2.25.3"
   },
