--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ pagination_dir: page
 #landscape is a default theme
 # theme: hexo-theme-sagiri
 # theme: next6
-theme: myIcarus
+theme: icarus
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
